--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Books#index</h1>
+<h1>Books</h1>
 <p>Find me in app/views/books/index.html.erb</p>
+<h1>新規投稿</h1>
+
+<%= form_with model: @book do |f| %>
+ <h4>タイトル</h4>
+ <%= f.text_field :title %>
+
+ <h4>本文</h4>
+ <%= f.text_area :body %>
+
+ <%= f.submit '投稿' %>
+<% end %>
+
+
