--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,6 @@
 <h1>新規投稿</h1>
 
-<%= form_with model: @book.new do |f| %>
+<%= form_with model: @book do |f| %>
  <h4>タイトル</h4>
  <%= f.text_field :title %>
 
