--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,31 @@
 <h1>Books</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+
+  <table>
+  <thead>
+   <tr>
+    <th>title</th>
+    <th>body</th>
+   </tr>
+   </thead>
+   
+  <tbody>
+   <% @books.each do |book| %>
+    <tr>
+     <td><%= book.title %></td>
+     <td><%= book.body %></td>
+     <td><%= link_to 'show' , book_path(book.id) %></td>
+     <td><%= link_to 'edit' , edit_book_path(book.id) %></td>
+     <td><%= link_to 'destroy' , book_path(book.id), method: :delete %></td>
+    </tr>
+   <% end %>
+  </tbody>
+  </table>
+  
+
+
 <h1>新規投稿</h1>
 
-<%= form_with model: @book do |f| %>
+<%= form_with model: @newbook do |f| %>
  <h4>タイトル</h4>
  <%= f.text_field :title %>
 
