--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<tr>
+<p><td><strong>Title:</strong></td>
+<td><%= @book.title %></td></p>
+</tr>
+
+<tr>
+<p><td><strong>Title:</strong></td>
+<td><%= @book.title %></td></p>
+</tr>
+
+<tr>
+<td><%= link_to 'Edit' , edit_book_path(@book.id) %></td>
+<td><%= link_to 'Back' , books_path %></td>
+<tb><%= link_to "削除" , books_path(@book.id), method: :delete %></tb>
+</tr>
