--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,12 +4,13 @@
 </tr>
 
 <tr>
-<p><td><strong>Title:</strong></td>
-<td><%= @book.title %></td></p>
+<p><td><strong>Body:</strong></td>
+<td><%= @book.body %></td></p>
 </tr>
 
 <tr>
 <td><%= link_to 'Edit' , edit_book_path(@book.id) %></td>
 <td><%= link_to 'Back' , books_path %></td>
-<tb><%= link_to "削除" , books_path(@book.id), method: :delete %></tb>
 </tr>
+
+
