--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,12 @@
 <h1>Books</h1>
+<% if @book.errors.any? %>
+<%= @book.errors.count %> errors prohibited this book from being saved:
+<ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
   <table>
   <thead>
@@ -13,9 +21,9 @@
     <tr>
      <td><%= book.title %></td>
      <td><%= book.body %></td>
-     <td><%= link_to 'show' , book_path(book.id) %></td>
-     <td><%= link_to 'edit' , edit_book_path(book.id) %></td>
-     <td><%= link_to 'destroy' , book_path(book.id), method: :delete %></td>
+     <td><%= link_to 'Show' , book_path(book.id) %></td>
+     <td><%= link_to 'Edit' , edit_book_path(book.id) %></td>
+     <td><%= link_to 'Destroy' , book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
     </tr>
    <% end %>
   </tbody>
@@ -23,16 +31,16 @@
   
 
 
-<h1>新規投稿</h1>
+<h1>New book</h1>
 
-<%= form_with model: @newbook do |f| %>
- <h4>タイトル</h4>
+<%= form_with model: @book do |f| %>
+ <h4>Title</h4>
  <%= f.text_field :title %>
 
- <h4>本文</h4>
+ <h4>Body</h4>
  <%= f.text_area :body %>
 
- <%= f.submit '投稿' %>
+ <%= f.submit 'Create Book' %>
 <% end %>
 
 
