--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,12 @@
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
-<%= @book.errors.count %>件のエラーが発生しました
+<%= @book.errors.count %>errors prohibited this book from being saved:
 <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
-  </ul>
+</ul>
 <% end %>
 
 
@@ -19,10 +19,9 @@
 
  <%= f.submit 'Update Book' %><br>
  
- <tr>
-<td><%= link_to 'Show' , book_path(@book.id) %></td>     
-<td><%= link_to 'Back' , books_path %></td>
-
-</tr>
 <% end %>
+
+<%= link_to 'Show' , book_path(@book.id) %>     
+<%= link_to 'Back' , books_path %>
+
 
